[gd_scene load_steps=3 format=3 uid="uid://bx2hwox8kb287"]

[ext_resource type="Script" path="res://Scenes/Objects/UI/PartyMemberButtonUI.gd" id="1_cuo73"]
[ext_resource type="PackedScene" uid="uid://m0p4u7s6ya5f" path="res://Scenes/Objects/UI/HealthUI.tscn" id="1_g10v7"]

[node name="PartyMemberButtonUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_cuo73")

[node name="CenterContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Button" type="Button" parent="CenterContainer"]
layout_mode = 2
flat = true

[node name="HealthUI" parent="CenterContainer" instance=ExtResource("1_g10v7")]
layout_mode = 2
size_flags_vertical = 0

[connection signal="pressed" from="CenterContainer/Button" to="." method="_on_button_pressed"]
